Implement App Client authentication with token generation and refresh functionality, including AppClient entity, repository, service, and controller. Add integration tests for client authentication and token management.